--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+## 学习操作系统概念,完成书中的各个实验
+## 目前进度：
+ch2实验完成 2022年3月19日
+
+********************************************************
 This contains source code for the 9th edition of
 "Operating System Concepts" by Silberschatz/Galvin/Gagne.
 Published by John Wiley & Sons.
